# sigmaforge

./: .gitignore  LICENSE  README.md  pyproject.toml  writeup.md
.github/workflows/: test.yml
examples/rules/: ssh_failed_password.yml  suspicious_sudo.yml  web_scanner_useragent.yml
sigmaforge/: __init__.py  __main__.py  cli.py  converter.py  validator.py
tests/: test_converter.py  test_validator.py
