[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaforge"
version = "0.1.0"
description = "Sigma rule writer, validator, and multi-backend converter for detection engineering"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "B0bTheSkull" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pysigma>=0.11",
    "pysigma-backend-splunk>=1.1",
    "pysigma-backend-elasticsearch>=1.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
sigmaforge = "sigmaforge.cli:main"

[project.urls]
Homepage = "https://github.com/B0bTheSkull/sigmaforge"
Issues = "https://github.com/B0bTheSkull/sigmaforge/issues"

[tool.setuptools.packages.find]
include = ["sigmaforge*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
